--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "static/.vim/bundle/vim-windowswap"]
 	path = static/.vim/bundle/vim-windowswap
 	url = https://github.com/wesQ3/vim-windowswap.git
+[submodule "static/.vim/bundle/vim-superman"]
+	path = static/.vim/bundle/vim-superman
+	url = https://github.com/jez/vim-superman
