Added system to have tmux themes for each individual theme.

--- a/static/.tmux.conf
+++ b/static/.tmux.conf
@@ -43,8 +43,6 @@ set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf).
-run '~/.tmux/plugins/tpm/tpm'
 
 ######## General Binds ########
 
@@ -71,33 +69,15 @@ bind -r L resize-pane -R 5
 # This will toggle mouse mode
 bind m set -g mouse
 
+# Refresh config
+bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
+
 ######## Theme ########
 
-# General
-set -g default-terminal "screen-256color"
+source-file ~/.tmux_theme.conf
 
-# Control title names
-set -g set-titles on
-set -g set-titles-string '#{pane_current_command}'
 
-# Split
-set -g pane-active-border-fg "#211e20"
-set -g pane-active-border-bg default
-set -g pane-border-fg "#211e20"
-set -g pane-border-bg default
+######## Misc ########
 
-# Status
-set -g message-fg "#503939"
-set -g message-bg "#211e20"
-
-set -g status-justify right
-set -g status-fg "#503939"
-set -g status-bg "#211e20"
-set -g status-interval 5
-set -g status-utf8 on
-
-setw -g window-status-format "#[bg=#211e20,fg=#503939] #I:#W"
-setw -g window-status-current-format "#[bg=#211e20,fg=#775759] #I:#W"
-set -g status-justify left
-set-option -g status-right '#[bg=#211e20,fg=#503939] #H | %H:%M #[default]'
-set-option -g status-left '#[fg=#343034]###[default]'
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf).
+run '~/.tmux/plugins/tpm/tpm'
