--- a/.gitmodules
+++ b/.gitmodules
@@ -42,7 +42,7 @@
 	url = https://github.com/terryma/vim-multiple-cursors.git
 [submodule "static/.vim/bundle/vim-pathogen"]
 	path = static/.vim/bundle/vim-pathogen
-	url = git@github.com:tpope/vim-pathogen.git
+	url = https://github.com/tpope/vim-pathogen.git
 [submodule "static/.vim/bundle/vim-session"]
 	path = static/.vim/bundle/vim-session
 	url = https://github.com/xolox/vim-session.git
