--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "static/.vim/bundle/indentLine"]
 	path = static/.vim/bundle/indentLine
 	url = https://github.com/Yggdroot/indentLine.git
+[submodule "static/.vim/bundle/vim-minimap"]
+	path = static/.vim/bundle/vim-minimap
+	url = https://github.com/severin-lemaignan/vim-minimap
